[gd_scene load_steps=14 format=3 uid="uid://drb08kawdi5an"]

[ext_resource type="PackedScene" uid="uid://chq1lkece1wur" path="res://cooking/food_step.tscn" id="1_gajky"]
[ext_resource type="Script" path="res://cooking/steps/step_fold.gd" id="2_d5rff"]
[ext_resource type="Shader" path="res://cooking/steps/step_fold_bottom_dough.gdshader" id="3_5inns"]
[ext_resource type="Shader" path="res://cooking/steps/step_fold_dough_overlay.gdshader" id="3_74cav"]
[ext_resource type="Texture2D" uid="uid://dhhp1ccyb2oa0" path="res://cooking/art/BigDoughBallNormal.png" id="3_f215f"]
[ext_resource type="Texture2D" uid="uid://coib06vlmljeo" path="res://cooking/art/Counter_Red.png" id="3_ga4hl"]
[ext_resource type="PackedScene" uid="uid://bx3c2sms6ejy2" path="res://cooking/steps/instructions_panel.tscn" id="3_thty5"]
[ext_resource type="Texture2D" uid="uid://6rwqsc4do05u" path="res://cooking/art/arrow2.svg" id="6_gkao6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ib7rm"]
resource_local_to_scene = true
shader = ExtResource("3_5inns")
shader_parameter/north = 1.0
shader_parameter/east = 1.0
shader_parameter/south = 1.0
shader_parameter/west = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pkqmi"]
shader = ExtResource("3_74cav")
shader_parameter/fold_type = 0
shader_parameter/fold = 1.0

[sub_resource type="Animation" id="Animation_nky41"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightArrow:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [787.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftArrow:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [246.0]
}

[sub_resource type="Animation" id="Animation_8dirx"]
resource_name = "arrow_bounce"
length = 2.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightArrow:position:x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [858.0, 787.0, 858.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftArrow:position:x")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [246.0, 317.0, 246.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3sr3"]
_data = {
"RESET": SubResource("Animation_nky41"),
"arrow_bounce": SubResource("Animation_8dirx")
}

[node name="StepFold" instance=ExtResource("1_gajky")]
script = ExtResource("2_d5rff")

[node name="InstructionsPanel" parent="." index="0" instance=ExtResource("3_thty5")]
z_index = 1
layout_mode = 1
minigame_title = "FOLD"
instructions = "Click the edges of the dough and drag them into the center."

[node name="CounterRed" type="Sprite2D" parent="." index="1"]
position = Vector2(578, 325)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ga4hl")

[node name="Node2D" type="Node2D" parent="." index="2"]

[node name="BottomDough" type="Sprite2D" parent="Node2D" index="0"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ib7rm")
position = Vector2(552, 328)
texture = ExtResource("3_f215f")

[node name="DoughOverlay" type="Sprite2D" parent="Node2D" index="1"]
unique_name_in_owner = true
z_index = 1
material = SubResource("ShaderMaterial_pkqmi")
position = Vector2(552, 328)
texture = ExtResource("3_f215f")

[node name="LeftArrow" type="Sprite2D" parent="." index="3"]
unique_name_in_owner = true
position = Vector2(246, 151)
rotation = 1.57079
scale = Vector2(0.140739, 0.140739)
texture = ExtResource("6_gkao6")

[node name="RightArrow" type="Sprite2D" parent="." index="4"]
unique_name_in_owner = true
position = Vector2(787, 151)
rotation = -1.57079
scale = Vector2(0.140739, 0.140739)
texture = ExtResource("6_gkao6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_s3sr3")
}
autoplay = "arrow_bounce"
